update after static analisi